--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>赵凯爱欢欢</title>
+<title>Kai.Zhao and ZouHuanHuan</title>
 
 <style type="text/css">
 @font-face {
@@ -27,8 +27,8 @@
 			<span class="space"/><span class="comments">*我们相遇 2016—02-20,</span><br />
 			<span class="space"/><span class="comments">*我们相爱 2016-03-05.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			Boy name = <span class="keyword">赵</span> 凯<br />
-			Girl name = <span class="keyword">邹</span> 欢欢<br />
+			Boy name = <span class="keyword">Kai</span> Zhao<br />
+			Girl name = <span class="keyword">HuanHuan</span> Zou<br />
 			<span class="comments">// Fall in love river. </span><br />
 			The boy love the girl;<br />
 			<span class="comments">// They love each other.</span><br />
@@ -58,8 +58,8 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					爱你直到永永远远。<br/>
-					<div class="signature">- 赵凯</div>
+					Love you forever。<br/>
+					<div class="signature"> - Kai.Zhao</div>
 				</div>
 			</div>
 		</div>
